	  the maximum allowed size.
	- allow-miss cache_peer option disabling the use of "only-if-cached".
	  Meant to be used in conjunction with icp_hit_stale.
	- Delay pools tuned to allow large initial pool values
	- cachemgr filesystem space information changed to show useable space
	  rather than raw space, and platform support somewhat extended.

Changes to Squid-2.4.DEVEL2 ():

Changes to Squid-2.4.DEVEL1 ():

Changes to Squid-2.3.STABLE1 (Jan 9, 2000):

	- Updated PAM authentication module from Henrik Nordstrom.
	- Updated Bulgarian error messages from Svetlin Simeonov.
	- Changed ACL routines so that User-Agent (browser) string
	  is always taken from compiled HTTP request headers
	  instead of passed as an argument to aclCreateChecklist.
	- Added a 'strip' option to the 'uri_whitesace' configuration
	  directive and made it the default behavior.  Whitespace
	  found in URI's is now stripped out by default.
	- Added chroot feature.  The 'chroot_dir' config option enables
	  it and specifies the directory.
	- Changed clientBuildReplyHeader so that the Age header is
	  added only for cache hits, and only when we can calculate
	  a valid, positive age value.
	- Changed clientWriteComplete and clientGotNotEnough so
	  that they keep persistent connections open for more types
	  of replies that don't have bodies.
	- Changed filemap.c routines to dynamically grow filemap
	  space as needed.
	- Added a hack to ftp.c to deal with ftp.netscape.com, which
	  sometimes doesn't acknowledge PASV commands.
	- Fixed FTP bug with ftpScheduleReadControlReply; there
	  was not always a timeout handler on the control socket
	  after the transfer completed.
	- Fixed FTP filedescriptor leak from invalid PASV replies.
	- Changed httpBuildRequestHeader so that it doesn't
	  copy the Host header from the client request.  Instead
	  we should generate our own Host header which is known
	  to be correct.
	- Changed storeTimestampsSet to adjust entry->timestamp